--- a/account/create-account.html
+++ b/account/create-account.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="style/create-account.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="../Images/gamehublogo.png" />
 </head>
 <body>
         <div class="wrapper">
                 <form class="form-create">   
                   <a href="#" target="_blank" ><img class="logo" src="images/gamehub_createaccount.png" href="#" ></a>                  
-                  <input type="text" id="name" class="form-control pull-left" name="firstname" placeholder="First Name" area/>
-                  <input type="text" id="name" class="form-control pull-right" name="lastname" placeholder="Last Name" area/>
+                  <input type="text" id="name"  class="form-control pull-left " name="firstname" placeholder="First Name" area/>
+                  <input type="text" id="name"  class="form-control pull-right" name="lastname" placeholder="Last Name" area/>
 
                   <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
 
-                  <input type="tel" class="form-control" name="lastname" placeholder="Phone Number" area/>
+                  <input type="tel" class="form-control" name="phonenumber" placeholder="Phone Number" area/>
 
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
 
                   <input type="password" class="form-control" name="re-password" placeholder="Confirm Password"/>
 
                   <label class="checkbox pull-left">  
-                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
+                  <input type="checkbox" id="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
                   I accept the<a href="#" > Terms of Use </a>  & <a href="#" >Privacy Policy </a>
                   </label>
                   <div class="create-account">
