--- a/product/product.html
+++ b/product/product.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../style/footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/sticky.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/menu-bar.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/product-card.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -78,6 +79,7 @@
 
         <!--Body-->
         <div class="body">
+            <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
                     <img src="https://static.gamespot.com/uploads/original/1576/15769789/3399047-fallout76_e3_t51b_1528639326.png">
@@ -89,34 +91,51 @@
                     <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/xlarge/public/field/image/2018/07/fallout-76-camden-park.jpg?itok=4zkkY0NK">
                 </div>
             </div>
+
+            <!--Product Name-->
             <div class="product-name">Fallout 76 <sup>Pre-Order</sup></div>
-            <div class="right-hand-side-wrapper">
+
+            <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
+                <!--Product Genre-->
                 <div class="product-genre">Genre:
                     <a class="small-btn" href="#">Action</a>
                     <a class="small-btn" href="#">Action RPG</a>
                 </div>
+
+                <!--Product Supported Platform-->
                 <div class="product-genre">Platform:
                         <a class="pretty-anchor" href="#"><i class="fa fa-steam"></i></a>
                 </div>
+
+                <!--Product Price-->
                 <div class="product-price"><i class="fa fa-certificate"></i> 99.99$</div>
+                
+                <!--Shopping Button-->
                 <div class="btn-wrapper">
                     <a href="#" class="purple-btn">Buy Now</a>
                     <a href="#" class="purple-btn">Add To Cart</a>
                 </div>
             </div>
+
             <div class="product-description">
+
+                <!--Product Details-->
                 <div class="product-description-wrapper">
                     <div class="title">Details</div>
                     <div class="description">
                         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
                     </div>
                 </div>
+
+                <!--Product Description-->
                 <div class="product-description-wrapper">
                     <div class="title">Description</div>
                     <div class="description">
                         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
                     </div>
                 </div>
+
+                <!--Product System Requirement-->
                 <div class="product-description-wrapper">
                     <div class="title">System Requirement</div>
                     <div class="description">
@@ -124,8 +143,10 @@
                     </div>
                 </div>
             </div>
+
+            <!--Related Products-->
+            <div id="related-product-title" class="title">Related Products</div>
             <div class="related-product-wrapper">
-                <div class="title">Related Products</div>
                 <div class="related-product-container">
                     <a class="related-product pretty-anchor" href="#">
                         <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
@@ -148,6 +169,28 @@
                             <div class="related-product-price">99.99$<sup></sup></div>
                     </a>
                 </div>
+            </div>
+            <div class="related-product-card-container">
+                <a class="product-card" href="#">
+                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
+                        <div class="content-product-name">Rocket League</div>
+                        <div class="content-product-price">8.08$ <sup></sup></div>
+                </a>
+                <a class="product-card" href="#">
+                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
+                        <div class="content-product-name">Rocket League</div>
+                        <div class="content-product-price">8.08$ <sup></sup></div>
+                </a>
+                <a class="product-card" href="#">
+                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
+                        <div class="content-product-name">Rocket League</div>
+                        <div class="content-product-price">8.08$ <sup></sup></div>
+                </a>
+                <a class="product-card" href="#">
+                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
+                        <div class="content-product-name">Rocket League</div>
+                        <div class="content-product-price">8.08$ <sup></sup></div>
+                </a>
             </div>
         </div>
 
