--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -7,23 +7,23 @@
         GameHub Store
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="images/gamehublogo.png"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="style/header.css" />
+    <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/cart-form.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/footer.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/burger-menu.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/search-bar.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/slideshow.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/sticky.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/header-menu.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/common-style.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/menu-bar.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/footer.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/burger-menu.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/search-bar.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/slideshow.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/sticky.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/header-menu.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/common-style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/menu-bar.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/burger-menu.js"></script>
-    <script src="script/slideshow.js"></script>
-    <script src="script/product-tab.js"></script>
-    <script src="script/menu-bar.js"></script>
+    <script src="../script/burger-menu.js"></script>
+    <script src="../script/slideshow.js"></script>
+    <script src="../script/product-tab.js"></script>
+    <script src="../script/menu-bar.js"></script>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
             </div>
             <a href="#" class="pretty-anchor">Daily Deals</a>
             <a href="#" class="pretty-anchor">Feedback</a>
-            <a class="purple-btn" href="account/user-login.html">Login</a>
+            <a class="purple-btn" href="../account/user-login.html">Login</a>
         </div>
 
         <!--Burger Menu Icon-->
@@ -51,7 +51,7 @@
 
         <!--Website Logo-->
         <div class="logo">
-            <a href="index.html"><img id="logo-img" src="images/gamehub.png" alt="GameHub Logo"></a>
+            <a href="../index.html"><img id="logo-img" src="../images/gamehub.png" alt="GameHub Logo"></a>
         </div>
 
         <!--Shopping Cart Icon-->
@@ -68,7 +68,7 @@
         </div>
 
         <!--Login Button (Desktop)-->
-        <a class="login-wrapper pretty-anchor" href="account/user-login.html">
+        <a class="login-wrapper pretty-anchor" href="../account/user-login.html">
             <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
         </a>
     </header>
@@ -89,7 +89,7 @@
         </div>
         <div class="products_wrapper">
             <div class="products">
-                <div class="picture"><img src="Images/pubg.jpg"></div>
+                <div class="picture"><img src="../images/pubg.jpg"></div>
                 <div class="information">
                   <div class=product-name>PlayerUnknow's Battlegrounds</div>  
                   
@@ -111,7 +111,7 @@
                  </div>
             </div>
             <div class="products">
-                    <div class="picture"><img src="Images/pubg.jpg"></div>
+                    <div class="picture"><img src="../images/pubg.jpg"></div>
                     <div class="information">
                       <div class=product-name>PlayerUnknow's Battlegrounds</div>  
                       
