--- a/account/user-login.html
+++ b/account/user-login.html
@@ -12,7 +12,7 @@
 <body>
         <div class="wrapper">
                 <form class="form-signin">   
-                  <a href="#" target="_blank" ><img class="logo" src="../images/gamehub.png" href="#" ></a>
+                  <a href="../index.html"><img class="logo" src="../images/gamehub.png" href="#" ></a>
                   <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
                   <a href="#" class="new-account">Need help? </a>
@@ -20,7 +20,7 @@
                   <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
                   </label>
                   <div class="sign-in">
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
+                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>          
                   </div>
                 <a href=create-account.html >Create an account </a>
               </form>
