--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -21,6 +21,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../script/burger-menu.js"></script>
+    <script src="script/remove.js"></script>
     <script src="../script/slideshow.js"></script>
     <script src="../script/product-tab.js"></script>
     <script src="../script/menu-bar.js"></script>
