--- a/admin/add products.html
+++ b/admin/add products.html
@@ -88,8 +88,9 @@
                     <form class="form-style-9">
                         <ul>
                         <li>
-                            <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
-                            <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
+                            <input type="text" name="ID" class="field-style field-split align-left" placeholder="Product ID" />
+                           <input type="text" name="Name" class="field-style field-split align-right" placeholder="Product Name" />
+                           
                         
                         </li>
                         <li>
