--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <div class="content-product-price">14.62$ <sup></sup></div>
                     </a>
                 </div>
-                <a class="loadmore-btn" href="#">Load More</a>
+                <a href="category/popular.html" class="loadmore-btn">Load More</a>
             </div>
 
             <div class="line-wrapper">
@@ -303,7 +303,7 @@
                         <div class="content-product-price">33.11$ <sup></sup></div>
                     </a>
                 </div>
-                <a class="loadmore-btn" href="#">Load More</a>
+                <a class="loadmore-btn" href="category/newest.html">Load More</a>
             </div>
 
             <div class="line-wrapper">
@@ -338,7 +338,7 @@
                         <div class="content-product-price">15.05$ <sup></sup></div>
                     </a>
                 </div>
-                <a class="loadmore-btn" href="#">Load More</a>
+                <a class="loadmore-btn" href="category/topselling.html">Load More</a>
             </div>
 
             <div class="line-wrapper">
@@ -373,7 +373,7 @@
                         <div class="content-product-price">44.99$ <sup>-10%</sup></div>
                     </a>
                 </div>
-                <a class="loadmore-btn" href="#">Load More</a>
+                <a class="loadmore-btn" href="category/preorder.html">Load More</a>
             </div>
         </div>
     </div>
